mindy-bot-out-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: mindy-bot-out
spec:
  selector:
    matchLabels:
      app: mindy-bot-out
  replicas: 1
  template:
    metadata:
      labels:
        app: mindy-bot-out
    spec:
      containers:
        - image: 191518685251.dkr.ecr.us-west-1.amazonaws.com/mindy-bot-out:latest
          imagePullPolicy: Always
          name: mindy-bot-out
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mindy-bot-out-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: mindy-bot-out
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: mindy-bot-out-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:191518685251:certificate/be4dc13d-fae7-44f5-9236-86aaaf584c91
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: mindy-bot-out-service
                port:
                  number: 80
